Add Jetty server, options for args, refactor code
- Working Jetty server code to serve last 20 commits fetched from apache
- Refactored names with source and target
- Removed unncessary static methods
- clean build, tested some queries, ran the jetty

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,13 +1,13 @@
 
-first.name  =
-first.dir   =
-first.uri   =
-first.branch =
+source.alias = Apache
+source.local.path = /tmp/apache
+source.git.url = https://github.com/apache/ranger.git
+source.branch.name = master
 
-second.name=
-second.dir =
-second.uri =
-second.branch = 
+target.alias=
+target.local.path=
+target.git.url=
+target.branch.name=
 
-excluded.mods =
-reverse.excluded.mods =
+excluded.mods=
+reverse.excluded.mods=
